Add organization handlers specs
